Fixed the issues found by sonarcloud